# etckeeper

./: Cargo.toml  README.md
src/: etckeeper
src/crates/etckeeper-rs/: Cargo.toml
src/crates/etckeeper-rs/src/: cli.rs  main.rs
src/crates/etckeeper-rs/src/metadata/: cmd.rs  index.rs  mod.rs  shared_info.rs
src/crates/etckeeper-rs/src/metadata/formats/: mod.rs  original_v0.rs
src/crates/etckeeper-rs/src/metadata/formats/original_v0/: apply.rs  save.rs
src/crates/etckeeper-rs/src/metadata/index/: file.rs  xattrs.rs
src/crates/etckeeper-rs/src/metadata/shared_info/: repo_dir.rs  vcs.rs
src/crates/etckeeper-rs/src/metadata/shared_info/repo_dir/: metadata_file.rs
src/crates/passwdmap/: Cargo.toml
src/crates/passwdmap/src/: lib.rs  parser.rs  types.rs
src/crates/pathutils/: Cargo.toml
src/crates/pathutils/src/: abspath.rs  cleanpath.rs  lib.rs  relpath.rs  utils.rs
src/crates/shellquote/: Cargo.toml
src/crates/shellquote/src/: consts.rs  escape.rs  eval.rs  ext.rs  lib.rs  tests.rs
src/data/: argparse.sh  cmdscripts.sh  config.sh  init.sh  main.sh  utils.sh
src/data/commands/commit.d/: 10-self-pre-commit.sh  40-vcs-add.sh  90-vcs-commit.sh
src/data/commands/generate-ignore.d/: 00-init.sh  60-documented.sh  70-others.sh  80-editor-temps.sh  90-footer.sh
src/data/commands/init.d/: 10-vcs-init.sh  20-vcs-chmod.sh  30-self-init-ignore.sh  40-git-pre-commit-hook.sh  50-git-post-checkout.sh
src/data/core/: argparse.sh  cmdscripts.sh  dirs.sh  mod.sh
src/data/core/pm/: mod.sh
src/data/misc/: ignore.sh
src/data/utils/: traceback.sh
(+69 files in other folders)
