[package]
name = "etckeeper-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
camino.workspace = true
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
ignore = "0.4"
passwdmap.workspace = true
pathutils.workspace = true
phf.workspace = true
rustix.workspace = true
shellquote.workspace = true
strum = { version = "0.27", features = ["derive"] }
xattr = "1.5"

[dependencies.derive_more]
workspace = true
features = ["as_ref", "deref", "deref_mut"]
